Added divs, and img files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Test
+    <div class="header"> 
+        Logo and Navigation
+    </div>
+    <div class="main"> 
+        <div class="photo">Featured Photo</div>
+        <div class="projects">Previous Projects</div>
+        <div class="skills">Skills</div>
+        <div class="bio">Autobiography</div>
+    </div>
+    <div class="footer"> 
+        <div class="envelopeIcon"> </div>
+        <div class="footerContents">
+            Footer Contents
+            Logo, Address / Contact Information, and Personal Website
+            Copyright Information
+            <a href="#header">Back to Top</a>
+        </div>
+    </div>
 </body>
 </html>
