Updated css and html files

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         Logo and Navigation
     </div>
     <div class="main"> 
-        <div class="photo">Featured Photo</div>
-        <div class="projects">Previous Projects</div>
-        <div class="skills">Skills</div>
-        <div class="bio">Autobiography</div>
+        <div class = "mainContent" id="photo">Featured Photo</div>
+        <div class = "mainContent" id="projects">Previous Projects</div>
+        <div class = "mainContent" id="skills">Skills</div>
+        <div class = "mainContent" id="bio">Autobiography</div>
     </div>
     <div class="footer"> 
         <div class="envelopeIcon"> </div>
         <div class="footerContents">
-            Footer Contents
-            Logo, Address / Contact Information, and Personal Website
+            Footer Contents </br>
+            Logo, Address Contact Information, and Personal Website
             Copyright Information
             <a href="#header">Back to Top</a>
         </div>
