style: fixed positioning of divs and text, added borders to divs

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="header"> 
-        Logo and Navigation
+        <div class="headerContent"> Logo and Navigation </br>
+            <!-- <div class="headerNav" id="navPhoto">Featured Photo</div>
+            <div class="headerNav" id="navProjects">Previous Projects</div>
+            <div class="headerNav" id="navSkills">Skills</div>
+            <div class="headerNav" id="navBio">Autobiography</div> -->
+        </div>
     </div>
     <div class="main"> 
         <div class = "mainContent" id="photo">Featured Photo</div>
@@ -17,12 +22,14 @@
         <div class = "mainContent" id="bio">Autobiography</div>
     </div>
     <div class="footer"> 
-        <div class="envelopeIcon"> </div>
-        <div class="footerContents">
-            Footer Contents </br>
-            Logo, Address Contact Information, and Personal Website
-            Copyright Information
-            <a href="#header">Back to Top</a>
+        <div class="footerContent">
+            <img class="footerLogo" src="./images/pipLogo.png" alt="Logo">
+            <div class="footerText">
+                Footer Contents <br>
+                Logo, Address Contact Information, and Personal Website <br>
+                Copyright Information <br>
+                <a href="#header">Back to Top</a> <br>
+            </div>
         </div>
     </div>
 </body>
