style: added colors, added glow effect feat: fixed page links

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header"> 
-        <div class="headerContent"> Logo and Navigation </br>
-            <!-- <div class="headerNav" id="navPhoto">Featured Photo</div>
-            <div class="headerNav" id="navProjects">Previous Projects</div>
-            <div class="headerNav" id="navSkills">Skills</div>
-            <div class="headerNav" id="navBio">Autobiography</div> -->
+    <div class="header" id = "header"> 
+        <div class="headerContent">
+            <div class="headerContextText">Navigation </br></div> 
+            <div class="navBarText">
+                <a href="#photo" class="headerNav" id="navPhoto">Featured Photo</a>
+                <a href="#projects" class="headerNav" id="navProjects">Previous Projects</a>
+                <a href="#skills" class="headerNav" id="navSkills">Skills</a>
+                <a href="#bio" class="headerNav" id="navBio">Autobiography</a>
+            </div>
         </div>
     </div>
     <div class="main"> 
@@ -34,3 +37,4 @@
     </div>
 </body>
 </html>
+
