--- a/index.html
+++ b/index.html
@@ -19,10 +19,60 @@
         </div>
     </div>
     <div class="main"> 
-        <div class = "mainContent" id="photo">Featured Photo</div>
-        <div class = "mainContent" id="projects">Previous Projects</div>
-        <div class = "mainContent" id="skills">Skills</div>
-        <div class = "mainContent" id="bio">Autobiography</div>
+        <div class = "mainContent" id="photo">Featured Photo
+            <div class="photoImageDiv">
+                <img class="photoImage" src="./images/self1.jpg" alt="Photo">
+            </div>
+        </div>
+        <div class = "mainContent" id="projects">Previous Projects
+            <div class="projectsImageDiv">
+                <img class="projectsImage" src="./images/game1.png" alt="Image">
+            </div>
+        </div>
+        <div class = "mainContent" id="skills">Skills
+            <div class="skillText">
+                Abilities <br/>
+                • Energy Absorption <br/>
+                • Telekinesis <br/>
+                • Sealing Spell <br/>
+                Energy Techniques <br/>
+                • Shining Soul <br/>
+                • Dragon Blast <br/>
+                • Energy Meteor <br/>
+                • 10x Kamehameha <br/>
+                • Blast Fist <br/>
+                • Dimension Breaker <br/>
+                • Double Kamehameha <br/>
+                • Triple Kamehameha <br/>
+                • Dragon Fist <br/>
+                • Super Dragon Fist <br/>
+                • Final Strike <br/>
+                • Super Dragon Twin Fists <br/>
+                • Dragon Hammer <br/>
+                • Double Tsuibikidan <br/>
+                • MAX Power Kamehameha <br/>
+                • Instant Spirit Bomb <br/>
+                • Ki Burst Sphere <br/>
+                • Saiyan Aura Blast <br/>
+                • Spirit Shock <br/>
+                • Super Ultra Spirit Bomb <br/>
+                Martial Arts Techniques <br/>
+                • Miracle Blow <br/>
+                • Discharge <br/>
+                • Sword Breaker <br/>
+                • Black Crow Kick <br/>
+                • Meteor Blast <br/> 
+                • Meteor Impact <br/>
+                • Destructive Dragon Fist <br/>
+                • Death-Defying Combination <br/>
+                • Super God Combination <br/>
+            </div>
+        </div>
+        <div class = "mainContent" id="bio">Autobiography
+            <div class="bioText">
+                My name is Yoshikage Kira. I’m 33 years old. My house is in the northeast section of Morioh, where all the villas are, and I am not married. I work as an employee for the Kame Yu department stores, and I get home every day by 8 PM at the latest. I don’t smoke, but I occasionally drink. I’m in bed by 11 PM, and make sure I get eight hours of sleep, no matter what. After having a glass of warm milk and doing about twenty minutes of stretches before going to bed, I usually have no problems sleeping until morning. Just like a baby, I wake up without any fatigue or stress in the morning. I was told there were no issues at my last check-up. I’m trying to explain that I’m a person who wishes to live a very quiet life. I take care not to trouble myself with any enemies, like winning and losing, that would cause me to lose sleep at night. That is how I deal with society, and I know that is what brings me happiness. Although, if I were to fight I wouldn’t lose to anyone.
+            </div>
+        </div>
     </div>
     <div class="footer"> 
         <div class="footerContent">
